--- a/src/avatars/styles/avatars.css
+++ b/src/avatars/styles/avatars.css
@@ -1,1 +1,54 @@
-/* 여기에 스타일을 구현해 주세요 */
+h1 {
+  font-size: 18px;
+  font-weight: 800;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: cornflowerblue;
+}
+
+.avatar-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.avatar-box {
+  display: block;
+  margin-bottom: 20px;
+}
+.avatar-box::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.avatar {
+  position: relative;
+  float: left;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  background-color: #dbdbdb;
+}
+.avatar + .avatar {
+  margin-left: 20px;
+}
+.avatar img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 50%;
+}
+
+.circle {
+  position: absolute;
+  right: -1px;
+  bottom: -1px;
+  width: 17px;
+  height: 17px;
+  border-radius: 50%;
+  background-color: #dbdbdb;
+}
+.avatar.greencircle .circle {
+  background-color: #4cfe88;
+}
